--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Colmar Academy</title>
+    <link rel="shortcut icon" type="image/png" href="./resources/images/favicon.png"/>
+    <link rel="stylesheet" href="./resources/css/reset.css" type="text/css">
+    <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
   <body>
 
