Finished basic header

--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
   <body>
-    <header class="head container">
-      <div class="logo">
-        <img src="./resources/images/ic-logo.svg" alt="Colmar Logo">
-        <div class="name">
-          COLMAR ACADEMY
+    <header>
+      <div class="head container">
+        <div class="logo">
+          <img src="./resources/images/ic-logo.svg" alt="Colmar Logo">
+          <div class="name">
+            COLMAR ACADEMY
+          </div>
         </div>
-      </div>
-      <div class="navigation">
-        <ul>
-          <li>On Campus</li>
-          <li>Online</li>
-          <li>For companies</li>
-          <li>Sign In</li>
-        </ul>
+        <div class="navigation">
+          <ul>
+            <li>On Campus</li>
+            <li>Online</li>
+            <li>For companies</li>
+            <li>Sign In</li>
+          </ul>
+        </div>
       </div>
     </header>
   </body>
