--- a/index.html
+++ b/index.html
@@ -26,5 +26,19 @@
         </div>
       </div>
     </header>
+    <main>
+      <div class="banner">
+        <div class="banner container" id="banner1">
+          <img src="./resources/images/banner.jpg" alt="Study Group">
+          <div class="description">
+            <h1>Learn something new everyday</h1>
+            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+            <div class="button">
+              Start here
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
