--- a/index.html
+++ b/index.html
@@ -27,14 +27,60 @@
       </div>
     </header>
     <main>
-      <div class="banner">
-        <div class="banner container" id="banner1">
-          <img src="./resources/images/banner.jpg" alt="Study Group">
-          <div class="description">
-            <h1>Learn something new everyday</h1>
-            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-            <div class="button">
-              Start here
+      <div class="section">
+        <div class="section container" id="banner">
+          <div class="left-section">
+            <img src="./resources/images/banner.jpg" alt="Study Group">
+          </div>
+          <div class="right-section">
+            <div class="description">
+              <h1>Learn something new everyday</h1>
+              <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+              <div class="button">
+                Start here
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="section">
+        <div class="section container" id="information">
+          <div class="left-section">
+            <img src="./resources/images/information-main.jpg" alt="Man Reading">
+            <h1>It doesn't hurt to keep practicing</h1>
+            <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+            <span>Emanual, Sr Strategist at Hiring.com</span>
+          </div>
+          <div class="right-section" id="info-des">
+            <div class="info" id="orientation">
+              <img src="./resources/images/information-orientation.jpg" alt="Students Walking">
+              <div class="description">
+                <h1>Orientation date</h1>
+                <h2>Tue 10/11 & Wed 10/12: 8am-3pm</h2>
+                <div class="read-more">
+                  <a href="#">Read more</a>
+                </div>
+              </div>
+            </div>
+            <div class="info" id="campus">
+              <img src="./resources/images/information-campus.jpg" alt="Classroom">
+              <div class="description">
+                <h1>Our campus</h1>
+                <h2>Find which campus is close by you</h2>
+                <div class="read-more">
+                  <a href="#">Read more</a>
+                </div>
+              </div>
+            </div>
+            <div class="info" id="guest">
+              <img src="./resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
+              <div class="description">
+                <h1>Our guest lecture</h1>
+                <h2>Join a keynote with Oliver Sack about music in medical treatment</h2>
+                <div class="read-more">
+                  <a href="#">Read more</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
