--- a/index.html
+++ b/index.html
@@ -9,21 +9,19 @@
   </head>
   <body>
     <header>
-      <div class="head container">
-        <div class="logo">
-          <img src="./resources/images/ic-logo.svg" alt="Colmar Logo">
-          <div class="name">
-            COLMAR ACADEMY
-          </div>
+      <div class="logo">
+        <img src="./resources/images/ic-logo.svg" alt="Colmar Logo">
+        <div class="name">
+          COLMAR ACADEMY
         </div>
-        <div class="navigation">
-          <ul>
-            <li>On Campus</li>
-            <li>Online</li>
-            <li>For companies</li>
-            <li>Sign In</li>
-          </ul>
-        </div>
+      </div>
+      <div class="navigation">
+        <ul>
+          <li>On Campus</li>
+          <li>Online</li>
+          <li>For companies</li>
+          <li>Sign In</li>
+        </ul>
       </div>
     </header>
     <main>
@@ -81,6 +79,61 @@
                   <a href="#">Read more</a>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="courses">
+        <h1>Start learning</h1>
+        <div class="class container">
+          <div class="department">
+            <img src="./resources/images/course-software.jpg" alt="Computers">
+            <div class="course-desc">
+              <h2>Software engineering</h2>
+              <h3>COURSES</h3>
+              <p>Web Development, Mobile Development, iOT, APIs</p>
+            </div>
+          </div>
+          <div class="department">
+            <img src="./resources/images/course-computer-art.jpg" alt="Mobile Phone">
+            <div class="course-desc">
+              <h2>Computer art</h2>
+              <h3>COURSES</h3>
+              <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+            </div>
+          </div>
+          <div class="department">
+            <img src="./resources/images/course-design.jpg" alt="Photographer">
+            <div class="course-desc">
+              <h2>Design</h2>
+              <h3>COURSES</h3>
+              <p>User Experience Design, User Research, Visual Design</p>
+            </div>
+          </div>
+        </div>
+        <div class="class container">
+          <div class="department">
+            <img src="./resources/images/course-data.jpg" alt="Computer with Data">
+            <div class="course-desc">
+              <h2>Data</h2>
+              <h3>COURSES</h3>
+              <p>Data Science, Big Data, SQL, Data Visualization</p>
+            </div>
+          </div>
+          <div class="department">
+            <img src="./resources/images/course-business.jpg" alt="Chess Board">
+            <div class="course-desc">
+              <h2>Business</h2>
+              <h3>COURSES</h3>
+              <p>Product Development, Business Development, Startup</p>
+            </div>
+          </div>
+          <div class="department">
+            <img src="./resources/images/course-marketing.jpg" alt="Smart Watch">
+            <div class="course-desc">
+              <h2>Marketing</h2>
+              <h3>COURSES</h3>
+              <p>Analytics, Content Marketing, Mobile Marketing</p>
             </div>
           </div>
         </div>
