Finished basic banner 4

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <div class="info" id="orientation">
               <img src="./resources/images/information-orientation.jpg" alt="Students Walking">
               <div class="description">
-                <h1>Orientation date</h1>
-                <h2>Tue 10/11 & Wed 10/12: 8am-3pm</h2>
+                <h2>Orientation date</h2>
+                <h3>Tue 10/11 & Wed 10/12: 8am-3pm</h3>
                 <div class="read-more">
                   <a href="#">Read more</a>
                 </div>
@@ -63,8 +63,8 @@
             <div class="info" id="campus">
               <img src="./resources/images/information-campus.jpg" alt="Classroom">
               <div class="description">
-                <h1>Our campus</h1>
-                <h2>Find which campus is close by you</h2>
+                <h2>Our campus</h2>
+                <h3>Find which campus is close by you</h3>
                 <div class="read-more">
                   <a href="#">Read more</a>
                 </div>
@@ -73,8 +73,8 @@
             <div class="info" id="guest">
               <img src="./resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
               <div class="description">
-                <h1>Our guest lecture</h1>
-                <h2>Join a keynote with Oliver Sack about music in medical treatment</h2>
+                <h2>Our guest lecture</h2>
+                <h3>Join a keynote with Oliver Sack about music in medical treatment</h3>
                 <div class="read-more">
                   <a href="#">Read more</a>
                 </div>
@@ -83,8 +83,8 @@
           </div>
         </div>
       </div>
-      <div class="courses">
-        <h1>Start learning</h1>
+      <div class="section">
+        <h1 class="sect-head">Start learning</h1>
         <div class="class container">
           <div class="department">
             <img src="./resources/images/course-software.jpg" alt="Computers">
@@ -134,6 +134,35 @@
               <h2>Marketing</h2>
               <h3>COURSES</h3>
               <p>Analytics, Content Marketing, Mobile Marketing</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="section">
+        <h1 class="sect-head">Thesis exhibit</h1>
+        <div class="thesis container">
+          <div class="left-section">
+            <video playsinline autoplay muted>
+              <source src="./resources/videos/thesis.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+            <h2>Reimagine urban</h2>
+            <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+          </div>
+          <div class="right-section">
+            <div class="info" id="fisma">
+              <img src="./resources/images/thesis-fisma.jpg" alt="Highlighting Info">
+              <div class="description">
+                <h2>Fisma: Design and Prototype</h2>
+                <h3>Designer showcase of new prototype product</h3>
+              </div>
+            </div>
+            <div class="info">
+              <img src="./resources/images/thesis-now-and-then.jpg" alt="City Skyline">
+              <div class="description">
+                <h2>Now and then</h2>
+                <h3>Research study about New York</h3>
+              </div>
             </div>
           </div>
         </div>
