Finished basic nonresponsive layout

--- a/index.html
+++ b/index.html
@@ -167,6 +167,17 @@
           </div>
         </div>
       </div>
+      <div class="footer">
+        <div class="copyright">
+          &#9426; Colmar Academy. All rights reserved
+        </div>
+        <div class="foot-nav">
+          <ul>
+            <li>Terms</li>
+            <li>Privacy</li>
+          </ul>
+        </div>
+      </div>
     </main>
   </body>
 </html>
