--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="logo">
         <img src="./resources/images/ic-logo.svg" alt="Colmar Logo">
         <div class="name">
-          COLMAR ACADEMY
+          <span>COLMAR ACADEMY</span>
         </div>
       </div>
       <div class="navigation">
@@ -22,6 +22,12 @@
           <li>For companies</li>
           <li>Sign In</li>
         </ul>
+      </div>
+      <div class="mobile-nav">
+        <img src="./resources/images/ic-logo.svg" alt="Mobile Icon">
+        <img src="./resources/images/ic-on-campus.svg" alt="On Campus Icon">
+        <img src="./resources/images/ic-online.svg" alt="Online Icon">
+        <img src="./resources/images/ic-login.svg" alt="Login Icon">
       </div>
     </header>
     <main>
