Some general font stylings complete

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="logo">
         <img src="./resources/images/ic-logo.svg" alt="Colmar Logo">
         <div class="name">
-          <span>COLMAR ACADEMY</span>
+        COLMAR<span>ACADEMY</span>
         </div>
       </div>
       <div class="navigation">
