Majority of stylings complete

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
       </div>
       <div class="navigation">
         <ul>
-          <li>On Campus</li>
-          <li>Online</li>
-          <li>For companies</li>
-          <li>Sign In</li>
+          <li><a href="#">On Campus</a></li>
+          <li><a href="#">Online</a></li>
+          <li><a href="#">For companies</a></li>
+          <li><a href="#">Sign in</a></li>
         </ul>
       </div>
       <div class="mobile-nav">
-        <img src="./resources/images/ic-logo.svg" alt="Mobile Icon">
-        <img src="./resources/images/ic-on-campus.svg" alt="On Campus Icon">
-        <img src="./resources/images/ic-online.svg" alt="Online Icon">
-        <img src="./resources/images/ic-login.svg" alt="Login Icon">
+        <a href="#"><img src="./resources/images/ic-logo.svg" alt="Mobile Icon"></a>
+        <a href="#"><img src="./resources/images/ic-on-campus.svg" alt="On Campus Icon"></a>
+        <a href="#"><img src="./resources/images/ic-online.svg" alt="Online Icon"></a>
+        <a href="#"><img src="./resources/images/ic-login.svg" alt="Login Icon"></a>
       </div>
     </header>
     <main>
@@ -89,7 +89,7 @@
           </div>
         </div>
       </div>
-      <div class="section">
+      <div class="section" id="learn">
         <h1 class="sect-head">Start learning</h1>
         <div class="class container">
           <div class="department">
@@ -144,7 +144,7 @@
           </div>
         </div>
       </div>
-      <div class="section">
+      <div class="section" id="thesis">
         <h1 class="sect-head">Thesis exhibit</h1>
         <div class="thesis container">
           <div class="left-section">
