--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="shortcut icon" type="image/png" href="./resources/images/favicon.png"/>
     <link rel="stylesheet" href="./resources/css/reset.css" type="text/css">
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
   </head>
   <body>
+    <!--Header-->
     <header>
       <div class="logo">
         <img src="./resources/images/ic-logo.svg" alt="Colmar Logo">
@@ -30,6 +32,7 @@
         <a href="#"><img src="./resources/images/ic-login.svg" alt="Login Icon"></a>
       </div>
     </header>
+    <!--Main-->
     <main>
       <div class="section">
         <div class="section container" id="banner">
@@ -40,9 +43,9 @@
             <div class="description">
               <h1>Learn something new everyday</h1>
               <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-              <div class="button">
+              <a href="#"><div class="button">
                 Start here
-              </div>
+              </div></a>
             </div>
           </div>
         </div>
@@ -173,14 +176,19 @@
           </div>
         </div>
       </div>
+      <!--Footer-->
       <div class="footer">
         <div class="copyright">
           &#9426; Colmar Academy. All rights reserved
         </div>
+        <div class="social">
+          <span>Share on</span>
+          <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
+        </div>
         <div class="foot-nav">
           <ul>
-            <li>Terms</li>
-            <li>Privacy</li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Privacy</a></li>
           </ul>
         </div>
       </div>
